Mejorar diseño visual sección 'Qué hacemos' con service-cards estilo propuesta de valor

--- a/index.html
+++ b/index.html
@@ -1074,43 +1074,73 @@
         <div>
           <div class="badge"><span class="dot" aria-hidden="true"></span> QUÉ HACEMOS</div>
           <div class="section-title">Qué hacemos</div>
-          <p class="section-desc">
-            Trabajamos junto con áreas de:
-          </p>
         </div>
       </div>
 
-      <div class="two-col" style="margin-top: 24px; gap: 20px;">
-        <div class="glass-card">
-          <h3 style="margin: 0 0 16px; font-size: 18px; font-weight: 600; color: var(--wine);">Trabajamos junto con áreas de:</h3>
-          <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
-            <li>Recursos Humanos y Desarrollo Organizacional</li>
-            <li>Diversidad, Equidad e Inclusión (DEI)</li>
-            <li>Sostenibilidad / ESG</li>
-            <li>Cumplimiento y Gobierno Corporativo</li>
-            <li>Responsabilidad Social</li>
-            <li>Community Engagement y Relación con Comunidades</li>
-          </ul>
-        </div>
+      <div class="service-grid" style="margin-top: 18px;">
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon teal" aria-hidden="true">🤝</div>
+                <div class="service-tag"><span class="dot" aria-hidden="true"></span> áreas</div>
+              </div>
+              <h3 class="service-title">Trabajamos junto con áreas de:</h3>
+              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+                <li>Recursos Humanos y Desarrollo Organizacional</li>
+                <li>Diversidad, Equidad e Inclusión (DEI)</li>
+                <li>Sostenibilidad / ESG</li>
+                <li>Cumplimiento y Gobierno Corporativo</li>
+                <li>Responsabilidad Social</li>
+                <li>Community Engagement y Relación con Comunidades</li>
+              </ul>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
+          </div>
+        </article>
 
-        <div class="glass-card">
-          <h3 style="margin: 0 0 16px; font-size: 18px; font-weight: 600; color: var(--wine);">Para diseñar e implementar:</h3>
-          <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
-            <li>Programas de capacitación y sensibilización</li>
-            <li>Políticas, protocolos y marcos institucionales</li>
-            <li>Estrategias de inclusión, igualdad y prevención de violencias</li>
-            <li>Procesos comunitarios con enfoque de derechos humanos, igualdad y no discriminación</li>
-          </ul>
-        </div>
-      </div>
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon wine" aria-hidden="true">🎯</div>
+                <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> implementación</div>
+              </div>
+              <h3 class="service-title">Para diseñar e implementar:</h3>
+              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+                <li>Programas de capacitación y sensibilización</li>
+                <li>Políticas, protocolos y marcos institucionales</li>
+                <li>Estrategias de inclusión, igualdad y prevención de violencias</li>
+                <li>Procesos comunitarios con enfoque de derechos humanos, igualdad y no discriminación</li>
+              </ul>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
+          </div>
+        </article>
 
-      <div class="glass-card" style="margin-top: 20px;">
-        <h3 style="margin: 0 0 16px; font-size: 18px; font-weight: 600; color: var(--wine);">Nuestro enfoque fortalece:</h3>
-        <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
-          <li>La cultura organizacional y el clima laboral</li>
-          <li>El cumplimiento normativo y la prevención de riesgos</li>
-          <li>El impacto social positivo en comunidades y grupos de interés vinculados a las organizaciones.</li>
-        </ul>
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon teal" aria-hidden="true">💪</div>
+                <div class="service-tag"><span class="dot" aria-hidden="true"></span> impacto</div>
+              </div>
+              <h3 class="service-title">Nuestro enfoque fortalece:</h3>
+              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+                <li>La cultura organizacional y el clima laboral</li>
+                <li>El cumplimiento normativo y la prevención de riesgos</li>
+                <li>El impacto social positivo en comunidades y grupos de interés vinculados a las organizaciones.</li>
+              </ul>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
+          </div>
+        </article>
       </div>
 
       <div class="section-actions" style="margin-top: 24px;">
