Reestructurar sección Colaboraciones: layout dos columnas con logo a la izquierda y lista a la derecha

--- a/index.html
+++ b/index.html
@@ -1235,21 +1235,32 @@
         <div>
           <div class="badge"><span class="dot" aria-hidden="true"></span> COLABORACIONES</div>
           <div class="section-title">Colaboraciones especializadas</div>
-          <p class="section-desc">
-            Contamos con una red de especialistas en:
-          </p>
-          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
-            <li>Derecho laboral y derechos humanos</li>
-            <li>ESG y sostenibilidad</li>
-            <li>Igualdad laboral y DEI</li>
-            <li>Interculturalidad y no discriminación</li>
-            <li>Accesibilidad y diseño universal</li>
-            <li>Bienestar psicosocial y riesgos psicosociales</li>
-            <li>Gestión de riesgos y cumplimiento normativo</li>
-          </ul>
-          <p class="section-desc" style="margin-top: 12px;">
-            Esto nos permite ofrecer soluciones integrales, técnicas y de alto impacto.
-          </p>
+        </div>
+      </div>
+
+      <div class="who-wrap" style="margin-top: 24px;">
+        <div class="who-inner">
+          <div class="who-left" style="display: flex; align-items: center; justify-content: center; background: rgba(254,251,249,.95);">
+            <img src="assets/Logo/Elvira Strategy .png" alt="Elvira Strategy" style="max-width: 80%; height: auto; object-fit: contain;" />
+          </div>
+
+          <div class="who-right" style="background: rgba(254,251,249,.95); padding: 40px; display: flex; flex-direction: column; justify-content: center;">
+            <p class="section-desc" style="margin: 0 0 20px;">
+              Contamos con una red de especialistas en:
+            </p>
+            <ul style="margin: 0 0 20px; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
+              <li>Derecho laboral y derechos humanos</li>
+              <li>ESG y sostenibilidad</li>
+              <li>Igualdad laboral y DEI</li>
+              <li>Interculturalidad y no discriminación</li>
+              <li>Accesibilidad y diseño universal</li>
+              <li>Bienestar psicosocial y riesgos psicosociales</li>
+              <li>Gestión de riesgos y cumplimiento normativo</li>
+            </ul>
+            <p class="section-desc" style="margin: 0;">
+              Esto nos permite ofrecer soluciones integrales, técnicas y de alto impacto.
+            </p>
+          </div>
         </div>
       </div>
     </div>
