Actualizar tipografía y color del mensaje de visión: usar Cormorant Garamond y color vino como el hero

--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
       <!-- MENSAJE DE CIERRE / VISIÓN -->
       <div class="wrap" style="margin-top: 32px;">
         <div class="glass-card" style="text-align: center; padding: 40px 32px;">
-          <p style="font-size: clamp(20px, 2.5vw, 28px); line-height: 1.4; margin: 0; color: rgba(45,45,45,.85); font-style: italic;">
+          <p style="font-family: 'Cormorant Garamond', serif; font-size: clamp(24px, 3vw, 36px); line-height: 1.4; margin: 0; color: var(--wine); font-style: italic; font-weight: 400; letter-spacing: -0.01em;">
             Creemos que cuando una persona transforma su mirada, esa transformación se multiplica en su equipo, su organización y su comunidad.
           </p>
         </div>
