--- a/consultoria.html
+++ b/consultoria.html
@@ -806,6 +806,67 @@
       gap: 16px;
     }
 
+    /* Service cards para líneas de consultoría */
+    .service-grid{
+      display:grid;
+      gap: 16px;
+      margin-top: 18px;
+    }
+    #trust .service-grid{
+      grid-template-columns: repeat(3, 1fr);
+    }
+    .service-card{
+      border-radius: var(--r-lg);
+      border: 1px solid rgba(232,197,202,.20);
+      background: rgba(254,251,249,.85);
+      box-shadow: var(--shadow-soft);
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      padding: 32px;
+      transition: var(--transition);
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+    .service-card:hover{
+      transform: translateY(-4px);
+      border-color: rgba(184,90,107,.30);
+      background: rgba(254,251,249,.92);
+      box-shadow: 0 20px 60px rgba(184,90,107,.10), 0 8px 30px rgba(45,125,107,.06);
+    }
+    .service-icon{
+      width: 50px;
+      height: 50px;
+      border-radius: 999px;
+      display:grid;
+      place-items:center;
+      color: rgba(250,249,247,.98);
+      font-weight: 900;
+      font-size: 24px;
+      border: 1px solid rgba(15,93,82,.25);
+      box-shadow: 0 18px 40px rgba(15,93,82,.15);
+      align-self: flex-start;
+    }
+    .service-icon.teal{ background: linear-gradient(135deg, var(--teal), var(--teal-light)); border-color: var(--teal); }
+    .service-icon.wine{ background: linear-gradient(135deg, var(--wine), var(--wine-light)); border-color: var(--wine); }
+    .service-title{
+      margin: 0;
+      font-family: 'Cormorant Garamond', serif;
+      font-size: 22px;
+      letter-spacing: -0.01em;
+      font-weight: 600;
+      line-height: 1.3;
+      color: var(--wine);
+    }
+    .service-text{
+      margin: 0;
+      color: rgba(45,45,45,.70);
+      line-height: 1.75;
+      font-size: 14px;
+      font-weight: 300;
+      letter-spacing: 0.01em;
+    }
+
     /* Testimonios */
     .test-grid{
       margin-top: 18px;
@@ -1029,6 +1090,7 @@
       .service-left{ padding: 20px; }
       .service-right{ border-left: none; border-top: 1px solid rgba(163,166,165,.14); min-height: 180px; }
       .service-grid{ gap: 14px; }
+      #trust .service-grid{ grid-template-columns: 1fr; }
       .service-title{ font-size: 20px; }
       .service-text{ font-size: 13px; }
       .chip-row{ gap: 8px; }
@@ -1174,88 +1236,48 @@
 
       <div class="service-grid" style="margin-top: 18px;">
         <article class="service-card">
-          <div class="service-row">
-            <div class="service-left">
-              <div class="service-top">
-                <div class="service-icon teal" aria-hidden="true">📋</div>
-                <div class="service-tag"><span class="dot" aria-hidden="true"></span> políticas</div>
-              </div>
-              <h3 class="service-title">Políticas y marcos institucionales</h3>
-              <p class="service-text">
-                Diseño, actualización e implementación de:
-              </p>
-              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
-                <li>Códigos de ética y conducta</li>
-                <li>Políticas de igualdad, DEI y no discriminación</li>
-                <li>Protocolos de prevención y atención de acoso y hostigamiento sexual y laboral</li>
-                <li>Sistemas de atención, acompañamiento y resolución de casos</li>
-              </ul>
-            </div>
-            <div class="service-right" aria-hidden="true">
-              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=1200&q=70');"></div>
-            </div>
-          </div>
+          <div class="service-icon teal" aria-hidden="true">📋</div>
+          <h3 class="service-title">Políticas y marcos institucionales</h3>
+          <p class="service-text">
+            Diseño, actualización e implementación de:
+          </p>
+          <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+            <li>Códigos de ética y conducta</li>
+            <li>Políticas de igualdad, DEI y no discriminación</li>
+            <li>Protocolos de prevención y atención de acoso y hostigamiento sexual y laboral</li>
+            <li>Sistemas de atención, acompañamiento y resolución de casos</li>
+          </ul>
         </article>
 
         <article class="service-card">
-          <div class="service-row">
-            <div class="service-left">
-              <div class="service-top">
-                <div class="service-icon wine" aria-hidden="true">✓</div>
-                <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> cumplimiento</div>
-              </div>
-              <h3 class="service-title">Normas y cumplimiento</h3>
-              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
-                <li>Acompañamiento para la implementación y certificación de la NMX-R-025-SCFI-2015 — Igualdad Laboral y No Discriminación</li>
-                <li>Implementación y cumplimiento de la NOM-035 — Riesgos psicosociales</li>
-                <li>Integración de indicadores, evidencias y mecanismos de seguimiento</li>
-                <li>Alineación con estándares nacionales e internacionales en materia de sostenibilidad, ESG, DEI y derechos humanos.</li>
-              </ul>
-            </div>
-            <div class="service-right" aria-hidden="true">
-              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1200&q=70');"></div>
-            </div>
-          </div>
+          <div class="service-icon wine" aria-hidden="true">✓</div>
+          <h3 class="service-title">Normas y cumplimiento</h3>
+          <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+            <li>Acompañamiento para la implementación y certificación de la NMX-R-025-SCFI-2015 — Igualdad Laboral y No Discriminación</li>
+            <li>Implementación y cumplimiento de la NOM-035 — Riesgos psicosociales</li>
+            <li>Integración de indicadores, evidencias y mecanismos de seguimiento</li>
+            <li>Alineación con estándares nacionales e internacionales en materia de sostenibilidad, ESG, DEI y derechos humanos.</li>
+          </ul>
         </article>
 
         <article class="service-card">
-          <div class="service-row">
-            <div class="service-left">
-              <div class="service-top">
-                <div class="service-icon teal" aria-hidden="true">🎯</div>
-                <div class="service-tag"><span class="dot" aria-hidden="true"></span> transformación</div>
-              </div>
-              <h3 class="service-title">Enfoque estratégico y transformación cultural</h3>
-              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
-                <li>Integración transversal del enfoque DEI y derechos humanos</li>
-                <li>Estrategias de cambio cultural y liderazgo inclusivo</li>
-                <li>Diseño de indicadores, diagnósticos y planes de acción</li>
-              </ul>
-            </div>
-            <div class="service-right" aria-hidden="true">
-              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=70');"></div>
-            </div>
-          </div>
+          <div class="service-icon teal" aria-hidden="true">🎯</div>
+          <h3 class="service-title">Enfoque estratégico y transformación cultural</h3>
+          <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+            <li>Integración transversal del enfoque DEI y derechos humanos</li>
+            <li>Estrategias de cambio cultural y liderazgo inclusivo</li>
+            <li>Diseño de indicadores, diagnósticos y planes de acción</li>
+          </ul>
         </article>
 
         <article class="service-card">
-          <div class="service-row">
-            <div class="service-left">
-              <div class="service-top">
-                <div class="service-icon wine" aria-hidden="true">🌱</div>
-                <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> sostenibilidad</div>
-              </div>
-              <h3 class="service-title">Alineación con sostenibilidad y ESG</h3>
-              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
-                <li>Inclusión, igualdad y derechos humanos en estrategias de sostenibilidad</li>
-                <li>Trabajo con grupos de interés y comunidades vinculadas</li>
-                <li>Fortalecimiento de programas de Community Engagement</li>
-              </ul>
-            </div>
-            <div class="service-right" aria-hidden="true">
-              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=1200&q=70');"></div>
-            </div>
-          </div>
+          <div class="service-icon wine" aria-hidden="true">🌱</div>
+          <h3 class="service-title">Alineación con sostenibilidad y ESG</h3>
+          <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+            <li>Inclusión, igualdad y derechos humanos en estrategias de sostenibilidad</li>
+            <li>Trabajo con grupos de interés y comunidades vinculadas</li>
+            <li>Fortalecimiento de programas de Community Engagement</li>
+          </ul>
         </article>
       </div>
 
