--- a/cursos.html
+++ b/cursos.html
@@ -853,6 +853,113 @@
       font-weight: 300;
       letter-spacing: 0.01em;
     }
+    
+    /* Cards estilo blog/news con barra de fecha vertical */
+    .blog-card{
+      border-radius: var(--r-lg);
+      border: 1px solid rgba(232,197,202,.20);
+      background: rgba(254,251,249,.85);
+      box-shadow: var(--shadow-soft);
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      overflow: hidden;
+      transition: var(--transition);
+      display: flex;
+      flex-direction: column;
+    }
+    .blog-card:hover{
+      transform: translateY(-4px);
+      border-color: rgba(184,90,107,.30);
+      box-shadow: 0 20px 60px rgba(184,90,107,.10), 0 8px 30px rgba(45,125,107,.06);
+    }
+    .blog-image-wrapper{
+      position: relative;
+      width: 100%;
+      height: 280px;
+      overflow: hidden;
+    }
+    .blog-image{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+    .blog-date-bar{
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      width: 60px;
+      background: linear-gradient(135deg, var(--wine), var(--wine-light));
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      writing-mode: vertical-rl;
+      text-orientation: mixed;
+      color: rgba(254,251,249,.98);
+      font-weight: 700;
+      font-size: 11px;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      box-shadow: 2px 0 10px rgba(0,0,0,.15);
+    }
+    .blog-content{
+      padding: 28px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+    .blog-category{
+      color: var(--wine);
+      font-weight: 700;
+      font-size: 12px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      text-decoration: underline;
+      text-underline-offset: 4px;
+    }
+    .blog-title{
+      margin: 0;
+      font-family: 'Cormorant Garamond', serif;
+      font-size: clamp(20px, 2.5vw, 28px);
+      font-weight: 600;
+      letter-spacing: -0.01em;
+      line-height: 1.3;
+      color: var(--wine);
+      text-decoration: underline;
+      text-underline-offset: 4px;
+    }
+    .blog-text{
+      margin: 0;
+      color: rgba(45,45,45,.70);
+      line-height: 1.85;
+      font-size: 15px;
+      font-weight: 300;
+      letter-spacing: 0.01em;
+    }
+    .blog-list{
+      list-style: none;
+      padding: 0;
+      margin: 8px 0 0;
+      display: grid;
+      gap: 8px;
+    }
+    .blog-list li{
+      color: rgba(45,45,45,.70);
+      line-height: 1.75;
+      font-size: 14px;
+      padding-left: 20px;
+      position: relative;
+    }
+    .blog-list li::before{
+      content: "•";
+      position: absolute;
+      left: 0;
+      color: var(--wine);
+      font-weight: 700;
+    }
     .steps{
       display:grid;
       gap: 12px;
@@ -1464,26 +1571,46 @@
         <div>
           <div class="badge"><span class="dot" aria-hidden="true"></span> PROCESOS COMUNITARIOS</div>
           <div class="section-title">Procesos comunitarios y participación social</div>
-          <p class="section-desc">
-            Trabajo con grupos de interés y comunidades vinculadas a empresas y proyectos, incluyendo:
-          </p>
-          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
-            <li>Mujeres indígenas</li>
-            <li>Mujeres de base y liderazgos comunitarios</li>
-            <li>Juventudes</li>
-          </ul>
-          <p class="section-desc" style="margin-top: 12px;">
-            Enfoque en:
-          </p>
-          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
-            <li>Prevención de violencias</li>
-            <li>Igualdad y no discriminación</li>
-            <li>Fortalecimiento del tejido social</li>
-          </ul>
-          <p class="section-desc" style="margin-top: 12px;">
-            Estas acciones fortalecen las estrategias de Community Engagement e impacto social responsable.
-          </p>
         </div>
+      </div>
+
+      <div class="two-col" style="margin-top: 24px;">
+        <article class="blog-card">
+          <div class="blog-image-wrapper">
+            <div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1200&q=70');"></div>
+            <div class="blog-date-bar">COMUNITARIO</div>
+          </div>
+          <div class="blog-content">
+            <div class="blog-category">GRUPOS DE INTERÉS</div>
+            <h3 class="blog-title">Trabajo con grupos de interés y comunidades vinculadas</h3>
+            <p class="blog-text">Trabajo con grupos de interés y comunidades vinculadas a empresas y proyectos, incluyendo:</p>
+            <ul class="blog-list">
+              <li>Mujeres indígenas</li>
+              <li>Mujeres de base y liderazgos comunitarios</li>
+              <li>Juventudes</li>
+            </ul>
+          </div>
+        </article>
+
+        <article class="blog-card">
+          <div class="blog-image-wrapper">
+            <div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=70');"></div>
+            <div class="blog-date-bar">ENFOQUE</div>
+          </div>
+          <div class="blog-content">
+            <div class="blog-category">ÁREAS DE TRABAJO</div>
+            <h3 class="blog-title">Enfoque en transformación social</h3>
+            <p class="blog-text">Enfoque en:</p>
+            <ul class="blog-list">
+              <li>Prevención de violencias</li>
+              <li>Igualdad y no discriminación</li>
+              <li>Fortalecimiento del tejido social</li>
+            </ul>
+            <p class="blog-text" style="margin-top: 12px;">
+              Estas acciones fortalecen las estrategias de Community Engagement e impacto social responsable.
+            </p>
+          </div>
+        </article>
       </div>
     </div>
   </section>
