--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
               </ul>
             </div>
             <div class="service-right" aria-hidden="true">
-              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=70');"></div>
+              <div class="service-img" style="background-image:url('./assets/Imagenes/Nuestro enfoque fortalece.jpg');"></div>
             </div>
           </div>
         </article>
