Actualizar imagen de cursos abiertos por Cursos.jpg y agregar al repositorio

--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
             </div>
           </div>
           <div class="who-right" aria-hidden="true">
-            <div class="who-photo" style="background-image: url('./assets/Imagenes/Hero_cursos.jpg');"></div>
+            <div class="who-photo" style="background-image: url('./assets/Imagenes/Cursos .jpg');"></div>
           </div>
         </div>
       </div>
