Actualizar imágenes de programas personalizados y cursos abiertos por imágenes locales

--- a/cursos.html
+++ b/cursos.html
@@ -1362,7 +1362,7 @@
     <div class="wrap">
       <div class="two-col" style="margin-top: 18px;">
         <article class="glass-card">
-          <div class="glass-card-image" style="background-image: url('https://images.unsplash.com/photo-1516321318423-f06f85e504b3?auto=format&fit=crop&w=1200&q=70');"></div>
+          <div class="glass-card-image" style="background-image: url('./assets/Imagenes/Solicita tu preogama.jpg');"></div>
           <div class="glass-card-content">
             <h2>Solicita tu programa personalizado</h2>
             <p>Diseñamos rutas de formación a la medida, con base en las necesidades y objetivos de tu organización.</p>
@@ -1370,7 +1370,7 @@
         </article>
 
         <article class="glass-card">
-          <div class="glass-card-image" style="background-image: url('https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=70');"></div>
+          <div class="glass-card-image" style="background-image: url('./assets/Imagenes/Tambien contamos con cursos.jpg');"></div>
           <div class="glass-card-content">
             <h2>También contamos con cursos abiertos al público</h2>
             <p>Muy pronto podrás consultar nuestro calendario de próximas fechas.</p>
