Unificar estilos de pills en heroes: todos con mismo tono vino sin diferencias

--- a/consultoria.html
+++ b/consultoria.html
@@ -344,17 +344,18 @@
       color: rgba(26,26,26,.72);
     }
     .mini-pill{
-      padding: 8px 12px;
+      padding: 10px 16px;
       border-radius: 999px;
-      border: 1px solid rgba(15,93,82,.25);
-      background: rgba(15,93,82,.10);
+      border: 1px solid rgba(184,90,107,.30);
+      background: rgba(184,90,107,.15);
       font-size: 12px;
-      font-weight: 650;
-      color: var(--teal);
+      font-weight: 500;
+      color: var(--wine);
+      letter-spacing: 0.02em;
     }
     .mini-pill.wine{
-      border-color: rgba(139,46,56,.30);
-      background: rgba(139,46,56,.15);
+      border-color: rgba(184,90,107,.30);
+      background: rgba(184,90,107,.15);
       color: var(--wine);
     }
 
