Actualizar imágenes de sección Qué hacemos por imágenes locales

--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
               </ul>
             </div>
             <div class="service-right" aria-hidden="true">
-              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1200&q=70');"></div>
+              <div class="service-img" style="background-image:url('./assets/Imagenes/Trabajemos junto.jpg');"></div>
             </div>
           </div>
         </article>
@@ -1114,7 +1114,7 @@
               </ul>
             </div>
             <div class="service-right" aria-hidden="true">
-              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1200&q=70');"></div>
+              <div class="service-img" style="background-image:url('./assets/Imagenes/Para diseñar e implementar.jpg');"></div>
             </div>
           </div>
         </article>
@@ -1134,7 +1134,7 @@
               </ul>
             </div>
             <div class="service-right" aria-hidden="true">
-              <div class="service-img" style="background-image:url('./assets/Imagenes/Nuestro enfoque fortalece.jpg');"></div>
+              <div class="service-img" style="background-image:url('./assets/Imagenes/Nuestro enfoque.jpg');"></div>
             </div>
           </div>
         </article>
