--- a/index.html
+++ b/index.html
@@ -732,6 +732,7 @@
       background-position: center;
       filter: saturate(0.9) contrast(1.05) brightness(1.05);
       opacity: .88;
+      border-radius: var(--r-lg);
     }
     .service-fab{
       position:absolute;
