Eliminar frase 'dentro y fuera del trabajo' del hero

--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
           <h1>ELVIRA<br/>STRATEGY</h1>
 
           <p class="sub">
-            Acompañamos a empresas, organizaciones y comunidades a construir espacios más inclusivos, seguros y dignos — dentro y fuera del trabajo.
+            Acompañamos a empresas, organizaciones y comunidades a construir espacios más inclusivos, seguros y dignos.
           </p>
           <p class="sub" style="margin-top: 12px;">
             Lo hacemos a través de capacitación estratégica, consultoría técnica especializada y procesos de sensibilización con impacto organizacional y social.
