Cambiar botón VER CONSULTORÍA a AGENDAR UNA REUNIÓN en cursos y eliminar links de WhatsApp de botones AGENDAR REUNIÓN

--- a/consultoria.html
+++ b/consultoria.html
@@ -1157,7 +1157,7 @@
         </div>
 
         <div class="nav-cta">
-          <a class="btn primary" href="https://wa.link/4wxidx" target="_blank" rel="noopener">
+          <a class="btn primary" href="#">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <path d="M6.5 3.5 9 6c.5.5.6 1.2.2 1.8L8 9.5c1.1 2.2 2.9 4 5.1 5.1l1.7-1.2c.6-.4 1.3-.3 1.8.2l2.5 2.5c.6.6.6 1.6 0 2.2l-1.4 1.4c-.6.6-1.4.9-2.3.8-9.1-1.1-16-8-17.1-17.1-.1-.9.2-1.7.8-2.3L4.3 3.5c.6-.6 1.6-.6 2.2 0Z" stroke="rgba(251,251,251,.88)" stroke-width="2" stroke-linejoin="round"/>
             </svg>
@@ -1199,7 +1199,7 @@
           </p>
 
           <div class="hero-actions">
-            <a class="btn primary" href="https://wa.link/4wxidx" target="_blank" rel="noopener">Agendar consultoría</a>
+            <a class="btn primary" href="#">Agendar consultoría</a>
             <a class="btn wine" href="#trust">Ver líneas de consultoría</a>
           </div>
 
