Unificar texto de botones agendar: todos dicen 'AGENDAR REUNIÓN'

--- a/consultoria.html
+++ b/consultoria.html
@@ -1199,7 +1199,7 @@
           </p>
 
           <div class="hero-actions">
-            <a class="btn primary" href="https://api.whatsapp.com/send?phone=5215578634127&text=Hola%20%F0%9F%91%8B%0AQuiero%20info%20sobre%20los%20cursos%20de%20Elvira%20Strategy%20%F0%9F%98%8A" target="_blank" rel="noopener">Agendar consultoría</a>
+            <a class="btn primary" href="https://api.whatsapp.com/send?phone=5215578634127&text=Hola%20%F0%9F%91%8B%0AQuiero%20info%20sobre%20los%20cursos%20de%20Elvira%20Strategy%20%F0%9F%98%8A" target="_blank" rel="noopener">AGENDAR REUNIÓN</a>
             <a class="btn wine" href="#trust">Ver líneas de consultoría</a>
           </div>
 
