Agregar sección de testimonios con widget de Senja

--- a/index.html
+++ b/index.html
@@ -1283,6 +1283,23 @@
     </div>
   </section>
 
+  <!-- TESTIMONIOS -->
+  <section id="testimonios">
+    <div class="section-bg section-bg-color"></div>
+    <div class="wrap">
+      <div class="section-head">
+        <div>
+          <div class="badge"><span class="dot" aria-hidden="true"></span> TESTIMONIOS</div>
+          <div class="section-title">Lo que dicen quienes trabajan con nosotros</div>
+        </div>
+      </div>
+
+      <div style="margin-top: 32px;">
+        <div class="senja-embed" data-id="cb8b8a67-e562-4b9-cda-6c1ec473e45f" data-mode="shadow" data-lazyload="false" style="display: block; width: 100%;"></div>
+      </div>
+    </div>
+  </section>
+
   <!-- FOOTER con redes -->
   <footer class="footer">
     <!-- Fondo del footer - Puedes cambiar el estilo aquí -->
@@ -1338,6 +1355,7 @@
     </div>
   </footer>
 
+  <script src="https://widget.senja.io/widget/cb8b8a67-e562-4b9-cda-6c1ec473e45f/platform.js" type="text/javascript" async></script>
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 
