Corregir ID del widget de Senja para que aparezca correctamente

--- a/index.html
+++ b/index.html
@@ -1295,7 +1295,7 @@
       </div>
 
       <div style="margin-top: 32px;">
-        <div class="senja-embed" data-id="cb8b8a67-e562-4b9-cda-6c1ec473e45f" data-mode="shadow" data-lazyload="false" style="display: block; width: 100%;"></div>
+        <div class="senja-embed" data-id="cb8b8a67-e562-4bb9-8cda-6c1ec473f45f" data-mode="shadow" data-lazyload="false" style="display: block; width: 100%;"></div>
       </div>
     </div>
   </section>
@@ -1355,7 +1355,7 @@
     </div>
   </footer>
 
-  <script src="https://widget.senja.io/widget/cb8b8a67-e562-4b9-cda-6c1ec473e45f/platform.js" type="text/javascript" async></script>
+  <script src="https://widget.senja.io/widget/cb8b8a67-e562-4bb9-8cda-6c1ec473f45f/platform.js" type="text/javascript" async></script>
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 
