--- a/cursos.html
+++ b/cursos.html
@@ -883,7 +883,7 @@
       height: 100%;
       object-fit: cover;
       background-size: cover;
-      background-position: center;
+      background-position: center top;
       background-repeat: no-repeat;
     }
     .blog-date-bar{
@@ -1585,7 +1585,7 @@
       <div class="two-col" style="margin-top: 24px;">
         <article class="blog-card">
           <div class="blog-image-wrapper">
-            <div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1200&q=70');"></div>
+            <div class="blog-image" style="background-image: url('./assets/Imagenes/Grupos de interes.jpg'); background-position: center top;"></div>
             <div class="blog-date-bar">COMUNITARIO</div>
           </div>
           <div class="blog-content">
@@ -1602,7 +1602,7 @@
 
         <article class="blog-card">
           <div class="blog-image-wrapper">
-            <div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=70');"></div>
+            <div class="blog-image" style="background-image: url('./assets/Imagenes/Areas de trabajo.jpg'); background-position: center top;"></div>
             <div class="blog-date-bar">ENFOQUE</div>
           </div>
           <div class="blog-content">
