Agregar imagen Trabajemos junto.jpg debajo de sección Líneas de consultoría
- Agregar bloque media-card con imagen Trabajemos junto.jpg
- Aplicar estilo consistente con otras imágenes grandes
- Actualizar background-position a center top para todas las imágenes .media

--- a/consultoria.html
+++ b/consultoria.html
@@ -723,7 +723,7 @@
       position: relative;
       min-height: 320px;
       background-size: cover;
-      background-position: center;
+      background-position: center top;
       background-repeat: no-repeat;
       filter: saturate(0.9) contrast(1.05) brightness(1.05);
     }
@@ -1290,6 +1290,18 @@
         </article>
       </div>
 
+    </div>
+  </section>
+
+  <!-- Imagen Trabajemos juntos -->
+  <section id="trabajemos">
+    <div class="section-bg section-bg-color"></div>
+    <div class="wrap">
+      <div class="media-grid">
+        <div class="media-card">
+          <div class="media" style="background-image: url('./assets/Imagenes/Trabajemos junto.jpg'); min-height: 400px;"></div>
+        </div>
+      </div>
     </div>
   </section>
 
