--- a/consultoria.html
+++ b/consultoria.html
@@ -424,11 +424,6 @@
       text-shadow: 0 2px 10px rgba(0,0,0,.25), 0 1px 3px rgba(0,0,0,.15);
     }
     
-    /* Texto blanco para el sub en el hero de consultoría */
-    .hero .sub{
-      color: rgba(255,255,255,.95);
-    }
-    
     /* Botones con fondo más sólido para mejor visibilidad */
     .hero .btn{
       box-shadow: 0 4px 15px rgba(0,0,0,.20);
@@ -1365,6 +1360,14 @@
               <path d="M9.4 9.2c.3-.3.8-.3 1.1 0l.7.7c.3.3.3.8 0 1.1l-.4.4c.7 1.2 1.7 2.2 2.9 2.9l.4-.4c.3-.3.8-.3 1.1 0l.7.7c.3.3.3.8 0 1.1l-.4.4c-.5.5-1.2.7-1.9.6-3.7-.7-6.7-3.7-7.4-7.4-.1-.7.1-1.4.6-1.9l.4-.4Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
             </svg>
             WhatsApp
+          </a>
+
+          <a class="wine" href="https://www.youtube.com/@elvirastrategy" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
+              <path d="M21.6 7.2c-.2-.8-.8-1.4-1.6-1.6C18.1 5.3 12 5.3 12 5.3s-6.1 0-8 .3c-.8.2-1.4.8-1.6 1.6C2 9.1 2 12 2 12s0 2.9.4 4.8c.2.8.8 1.4 1.6 1.6 1.9.3 8 .3 8 .3s6.1 0 8-.3c.8-.2 1.4-.8 1.6-1.6C22.4 14.9 22.4 12 22.4 12s0-2.9-.8-4.8Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+              <path d="m9.8 15.5 5.4-3.5-5.4-3.5v7Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+            </svg>
+            YouTube
           </a>
         </div>
       </div>
