--- a/cursos.html
+++ b/cursos.html
@@ -5,11 +5,43 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Elvira Strategy | Cursos</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
   <style>
+    /* Inter - Variable Font */
+    @font-face {
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 100 900;
+      font-display: swap;
+      src: url('./assets/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype-variations');
+      font-variation-settings: 'opsz' 14;
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style: italic;
+      font-weight: 100 900;
+      font-display: swap;
+      src: url('./assets/fonts/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype-variations');
+      font-variation-settings: 'opsz' 14;
+    }
+
+    /* Cormorant Garamond - Variable Font */
+    @font-face {
+      font-family: 'Cormorant Garamond';
+      font-style: normal;
+      font-weight: 300 700;
+      font-display: swap;
+      src: url('./assets/fonts/CormorantGaramond-VariableFont_wght.ttf') format('truetype-variations');
+    }
+
+    @font-face {
+      font-family: 'Cormorant Garamond';
+      font-style: italic;
+      font-weight: 300 700;
+      font-display: swap;
+      src: url('./assets/fonts/CormorantGaramond-Italic-VariableFont_wght.ttf') format('truetype-variations');
+    }
+
     :root{
       /* Paleta Elvira Strategy - Esquema claro elegante */
       --paper:#FEFBF9;   /* beige más cálido y suave */
@@ -58,7 +90,7 @@
     html,body{ height:100%; }
     body{
       margin:0;
-      font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
       font-weight: 400;
       letter-spacing: 0.01em;
       color: var(--text);
@@ -139,7 +171,7 @@
       display: block;
     }
     .brand b{ 
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-weight: 700; 
       letter-spacing: .2px; 
       color: var(--wine);
@@ -305,7 +337,7 @@
     }
     h1{
       margin: 24px auto 16px;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-weight: 500;
       letter-spacing: -0.01em;
       line-height: 1.1;
@@ -443,7 +475,7 @@
       font-size: 12px;
     }
     .section-title{
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: clamp(28px, 3.4vw, 48px);
       font-weight: 500;
       letter-spacing: -0.01em;
@@ -534,7 +566,7 @@
     }
     .accordion-title{
       margin: 0;
-      font-family: 'Inter', sans-serif;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
       font-size: 16px;
       font-weight: 700;
       letter-spacing: 0.02em;
@@ -664,7 +696,7 @@
     .pc-title{ 
       position: relative; 
       margin: 0; 
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: 24px; 
       font-weight: 500; 
       letter-spacing: -0.01em; 
@@ -838,7 +870,7 @@
     }
     .glass-card h2{
       margin: 0;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: clamp(22px, 2.8vw, 32px);
       font-weight: 600;
       letter-spacing: -0.01em;
@@ -922,7 +954,7 @@
     }
     .blog-title{
       margin: 0;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: clamp(20px, 2.5vw, 28px);
       font-weight: 600;
       letter-spacing: -0.01em;
@@ -1105,7 +1137,7 @@
     }
     .big-cta h2{
       margin: 0;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: clamp(28px, 3.8vw, 52px);
       letter-spacing: -0.02em;
       line-height: 1.1;
@@ -1155,7 +1187,7 @@
       object-fit: contain;
     }
     .footer-brand b{
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: 15px;
       letter-spacing: 0.01em;
       color: var(--wine);
