--- a/index.html
+++ b/index.html
@@ -5,11 +5,43 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Elvira Strategy | Inicio</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
   <style>
+    /* Inter - Variable Font */
+    @font-face {
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 100 900;
+      font-display: swap;
+      src: url('./assets/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype-variations');
+      font-variation-settings: 'opsz' 14;
+    }
+
+    @font-face {
+      font-family: 'Inter';
+      font-style: italic;
+      font-weight: 100 900;
+      font-display: swap;
+      src: url('./assets/fonts/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype-variations');
+      font-variation-settings: 'opsz' 14;
+    }
+
+    /* Cormorant Garamond - Variable Font */
+    @font-face {
+      font-family: 'Cormorant Garamond';
+      font-style: normal;
+      font-weight: 300 700;
+      font-display: swap;
+      src: url('./assets/fonts/CormorantGaramond-VariableFont_wght.ttf') format('truetype-variations');
+    }
+
+    @font-face {
+      font-family: 'Cormorant Garamond';
+      font-style: italic;
+      font-weight: 300 700;
+      font-display: swap;
+      src: url('./assets/fonts/CormorantGaramond-Italic-VariableFont_wght.ttf') format('truetype-variations');
+    }
+
     :root{
       /* Paleta Elvira Strategy - Esquema femenino suave */
       --paper:#FEFBF9;   /* beige más cálido y suave */
@@ -62,7 +94,7 @@
     html,body{ height:100%; }
     body{
       margin:0;
-      font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
       font-weight: 400;
       letter-spacing: 0.01em;
       color: var(--text);
@@ -145,7 +177,7 @@
       display: block;
     }
     .brand b{ 
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-weight: 500; 
       letter-spacing: 0.01em; 
       color: var(--wine);
@@ -310,7 +342,7 @@
     }
     h1{
       margin: 24px auto 16px;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-weight: 500;
       letter-spacing: -0.01em;
       line-height: 1.1;
@@ -461,7 +493,7 @@
     }
     .who-title{
       margin: 0;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: clamp(36px, 4.3vw, 60px);
       font-weight: 500;
       letter-spacing: -0.01em;
@@ -561,7 +593,7 @@
       font-size: 12px;
     }
     .section-title{
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: clamp(28px, 3.4vw, 48px);
       font-weight: 500;
       letter-spacing: -0.01em;
@@ -676,7 +708,7 @@
 
     .service-title{
       margin: 0;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: 24px;
       letter-spacing: -0.01em;
       font-weight: 500;
@@ -787,7 +819,7 @@
       object-fit: contain;
     }
     .footer-brand b{
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif;
       font-size: 15px;
       letter-spacing: 0.01em;
       color: var(--wine);
@@ -1162,7 +1194,7 @@
       <!-- MENSAJE DE CIERRE / VISIÓN -->
       <div class="wrap" style="margin-top: 32px;">
         <div class="glass-card" style="text-align: center; padding: 40px 32px;">
-          <p style="font-family: 'Cormorant Garamond', serif; font-size: clamp(24px, 3vw, 36px); line-height: 1.4; margin: 0; color: var(--wine); font-style: italic; font-weight: 400; letter-spacing: -0.01em;">
+          <p style="font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif; font-size: clamp(24px, 3vw, 36px); line-height: 1.4; margin: 0; color: var(--wine); font-style: italic; font-weight: 400; letter-spacing: -0.01em;">
             Creemos que cuando una persona transforma su mirada, esa transformación se multiplica en su equipo, su organización y su comunidad.
           </p>
         </div>
