Agregar botón de YouTube en footer de index y cursos

--- a/cursos.html
+++ b/cursos.html
@@ -1713,6 +1713,14 @@
             </svg>
             WhatsApp
           </a>
+
+          <a class="wine" href="https://www.youtube.com/@elvirastrategy" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
+              <path d="M21.6 7.2c-.2-.8-.8-1.4-1.6-1.6C18.1 5.3 12 5.3 12 5.3s-6.1 0-8 .3c-.8.2-1.4.8-1.6 1.6C2 9.1 2 12 2 12s0 2.9.4 4.8c.2.8.8 1.4 1.6 1.6 1.9.3 8 .3 8 .3s6.1 0 8-.3c.8-.2 1.4-.8 1.6-1.6C22.4 14.9 22.4 12 22.4 12s0-2.9-.8-4.8Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+              <path d="m9.8 15.5 5.4-3.5-5.4-3.5v7Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+            </svg>
+            YouTube
+          </a>
         </div>
       </div>
 
