Agregar página Team Building y actualizar navbar en todas las páginas

--- a/consultoria.html
+++ b/consultoria.html
@@ -1197,6 +1197,7 @@
           <a href="index.html">Inicio</a>
           <a href="consultoria.html" class="active">Consultoría</a>
           <a href="cursos.html">Cursos</a>
+          <a href="team-building-formacion.html">Team Building</a>
         </div>
 
         <div class="nav-cta">
@@ -1219,6 +1220,7 @@
         <a href="index.html">Inicio</a>
         <a href="consultoria.html">Consultoría</a>
         <a href="cursos.html">Cursos</a>
+        <a href="team-building-formacion.html">Team Building</a>
       </div>
     </div>
   </div>
