--- a/cursos.html
+++ b/cursos.html
@@ -1344,6 +1344,7 @@
           <a href="index.html">Inicio</a>
           <a href="consultoria.html">Consultoría</a>
           <a href="cursos.html" class="active">Cursos</a>
+          <a href="team-building-formacion.html">Team Building</a>
         </div>
 
         <div class="nav-cta">
@@ -1366,6 +1367,7 @@
         <a href="index.html">Inicio</a>
         <a href="consultoria.html">Consultoría</a>
         <a href="cursos.html">Cursos</a>
+        <a href="team-building-formacion.html">Team Building</a>
       </div>
     </div>
   </div>
