Simplificar iconos: dejar solo 1 icono por experiencia

--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -1323,7 +1323,7 @@
 
       <div class="service-grid" style="margin-top: 18px; grid-template-columns: repeat(3, 1fr);">
         <article class="service-card">
-          <div class="service-icon teal" aria-hidden="true">🤝❤️</div>
+          <div class="service-icon teal" aria-hidden="true">🤝</div>
           <h3 class="service-title">Cultura de confianza</h3>
         </article>
 
@@ -1333,22 +1333,22 @@
         </article>
 
         <article class="service-card">
-          <div class="service-icon teal" aria-hidden="true">💡🧩</div>
+          <div class="service-icon teal" aria-hidden="true">💡</div>
           <h3 class="service-title">Colaboración efectiva entre áreas</h3>
         </article>
 
         <article class="service-card">
-          <div class="service-icon wine" aria-hidden="true">🤝🌍</div>
+          <div class="service-icon wine" aria-hidden="true">🤝</div>
           <h3 class="service-title">Integración intergeneracional e intercultural</h3>
         </article>
 
         <article class="service-card">
-          <div class="service-icon teal" aria-hidden="true">🧠💡</div>
+          <div class="service-icon teal" aria-hidden="true">🧠</div>
           <h3 class="service-title">Sesgos inconscientes (sin culpa, con acción)</h3>
         </article>
 
         <article class="service-card">
-          <div class="service-icon wine" aria-hidden="true">🤝❤️</div>
+          <div class="service-icon wine" aria-hidden="true">🤝</div>
           <h3 class="service-title">Trabajo en equipo + bienestar (anti-burnout)</h3>
         </article>
 
@@ -1358,12 +1358,12 @@
         </article>
 
         <article class="service-card">
-          <div class="service-icon wine" aria-hidden="true">🛡️✓</div>
+          <div class="service-icon wine" aria-hidden="true">🛡️</div>
           <h3 class="service-title">Prevención de conflictos</h3>
         </article>
 
         <article class="service-card">
-          <div class="service-icon teal" aria-hidden="true">🙌⭐</div>
+          <div class="service-icon teal" aria-hidden="true">🙌</div>
           <h3 class="service-title">Diversidad e inclusión en acción (DEI real)</h3>
         </article>
       </div>
