Actualizar imagen del hero a Hero_team.jpg

--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -1240,8 +1240,8 @@
 
   <!-- HERO -->
   <header class="hero">
-    <!-- Fondo del hero con imagen Hero_Consultorias.jpg -->
-    <div class="section-bg section-bg-image" style="background-image: url('./assets/Imagenes/Hero_Consultorias.jpg'); background-size: cover; background-position: center top; background-repeat: no-repeat;">
+    <!-- Fondo del hero con imagen Hero_team.jpg -->
+    <div class="section-bg section-bg-image" style="background-image: url('./TEAM BUILDING/Hero_team.jpg'); background-size: cover; background-position: center top; background-repeat: no-repeat;">
       <div class="section-bg-overlay"></div>
     </div>
     <div class="wrap">
