Agregar imagen Hero_team.jpg y actualizar ruta en HTML

--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -1241,7 +1241,7 @@
   <!-- HERO -->
   <header class="hero">
     <!-- Fondo del hero con imagen Hero_team.jpg -->
-    <div class="section-bg section-bg-image" style="background-image: url('./TEAM BUILDING/Hero_team.jpg'); background-size: cover; background-position: center top; background-repeat: no-repeat;">
+    <div class="section-bg section-bg-image" style="background-image: url('./assets/TEAM BUILDING/Hero_team.jpg'); background-size: cover; background-position: center top; background-repeat: no-repeat;">
       <div class="section-bg-overlay"></div>
     </div>
     <div class="wrap">
